--- a/css/groceries.css
+++ b/css/groceries.css
@@ -1,6 +1,14 @@
 body
 {
   background-image: url(../images/groceries.jpeg);
+  /* Background image is centered vertically and horizontally at all times */
+  background-position: center center;
+  /* Background image is fixed in the viewport so that it doesn’t move when
+the content’s height is greater than the image’s height */
+  background-attachment: fixed;
+  /* This is what makes the background image rescale based
+on the container’s size */
+  background-size: cover; 
 }
 h1, p
 {
