--- a/css/groceries.css
+++ b/css/groceries.css
@@ -9,6 +9,7 @@ the content’s height is greater than the image’s height */
   /* This is what makes the background image rescale based
 on the container’s size */
   background-size: cover; 
+  font-family:"Itim";
 }
 h1, p
 {
